Cambiar bd, desaparece inicio y final configurables, contador antes de cada trial, mejorado orden de activities. Figura y ruta fijados constante por ahora

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,14 +8,16 @@
     <string name="ingrese_el_id_del_usuario">Enter the user id</string>
     <string name="continuar">Continue</string>
     <string name="nombre_config">Nombre</string>
-    <string name="figura_config">figura</string>
-    <string name="ruta_config">ruta</string>
-    <string name="desaparece_config">desaparece</string>
+    <string name="intentos_config">Intentos</string>
+    <string name="segundosVelocidad_config">Segundos Velocidad</string>
+    <string name="desapareceInicio_config">Desaparece Inicio</string>
+    <string name="desapareceFinal_config">Desaparece Final</string>
     <string name="nueva_configuracion">New configuration</string>
     <string name="configuraciones_guardadas">Saved configurations</string>
     <string name="eliminar_todo">Delete all</string>
     <string name="ingrese_el_nombre_de_la_config">Enter the name of the configuration</string>
-    <string name="selecciona_donde_desaparecera_el_objeto">Select the percentage of the screen on which the figure will disappear</string>
+    <string name="selecciona_donde_desaparecera_el_objeto_inicio">Select the percentage of the screen on which the figure will disappear at start</string>
+    <string name="selecciona_donde_desaparecera_el_objeto_final">Select the percentage of the screen on which the figure will disappear at end</string>
     <string name="enter_the_number_of_trainings">Enter the number of trainings</string>
     <string name="enter_the_speed">Enter the speed (seconds that the object takes to travel through the screen)</string>
     <string name="bienvenido_al_entrenamiento">Welcome to the Training phase</string>
