no transitions, ruta random in set, make trian number (still without interface), translated some strings, reorder layout disappear

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,16 +2,17 @@
     <string name="app_name">DataCaptureApp</string>
     <string name="selecciona_un_objeto">Select a figure</string>
     <string name="cuadrado">Cuadrado</string>
-    <string name="triangulo">Triangulo</string>
-    <string name="circulo">circulo</string>
+    <string name="triangulo">Triangle</string>
+    <string name="circulo">circle</string>
     <string name="rombo">rombo</string>
     <string name="ingrese_el_id_del_usuario">Enter the user id</string>
     <string name="continuar">Continue</string>
-    <string name="nombre_config">Nombre</string>
-    <string name="intentos_config">Intentos</string>
-    <string name="segundosVelocidad_config">Segundos Velocidad</string>
-    <string name="desapareceInicio_config">Desaparece Inicio</string>
-    <string name="desapareceFinal_config">Desaparece Final</string>
+    <string name="nombre_config">Name</string>
+    <string name="intentos_config">Training Number</string>
+    <string name="trial_config">Trial Number</string>
+    <string name="segundosVelocidad_config">Speed</string>
+    <string name="desapareceInicio_config">Disappear at</string>
+    <string name="desapareceFinal_config">Disappear ends</string>
     <string name="nueva_configuracion">New configuration</string>
     <string name="configuraciones_guardadas">Saved configurations</string>
     <string name="eliminar_todo">Delete all</string>
